<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".custom_components.SalesProcessNavigationFragment">

    <LinearLayout
        android:id="@+id/salesItemsNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnPreviousPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPreviousPage"></Button>
        <Button
            android:id="@+id/btnStartAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStartAgain"></Button>
        <Button
            android:id="@+id/btnNextPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNextPage"></Button>
    </LinearLayout>

</FrameLayout>