<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stepview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sdk_black"
                android:text="@string/initial_setup"
                android:textSize="16sp"
                android:layout_gravity="center"/>
        </androidx.appcompat.widget.Toolbar>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center"

            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioSandbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/pph_rbtn_selector_left"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="Sandbox"
                android:textColor="@drawable/pph_rbtn_textcolor_selector" />

            <RadioButton
                android:id="@+id/radioLive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/pph_rbtn_selector_right"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="Live"
                android:textColor="@drawable/pph_rbtn_textcolor_selector" />
        </RadioGroup>

        <!-- Steps container -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.selfcheckout_wof.PPH.ui.StepView
                    android:id="@+id/stpConnectToPaypal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    stepview:button_text="@string/btnConnectToPaypal"
                    stepview:code_text=""
                    stepview:title_text=""
                    />

                <com.example.selfcheckout_wof.PPH.ui.StepView
                    android:id="@+id/stpConnectPrinter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    stepview:button_text="@string/connect_printer"
                    stepview:code_text=""
                    stepview:title_text=""
                    />
            </LinearLayout>
        </ScrollView>


        <!-- Logout container -->
        <RelativeLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:padding="@dimen/activity_vertical_margin"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/merchant_account"
                    android:textColor="@color/sdk_black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/merchant_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/merchant_account_email"
                    android:textSize="12sp"
                    />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="onLogoutClicked"
                android:textColor="@color/sdk_primary_dark_blue"
                />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/pph_blue_btn_selector"
            android:onClick="onTestPrinter"
            android:layout_alignParentBottom="true"
            android:id="@+id/test_printer_button"
            android:visibility="gone"
            android:text="@string/test_printer"
            android:textAllCaps="false"
            android:textColor="@color/sdk_white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/pph_blue_btn_selector"
            android:onClick="onConnectCardReaderClicked"
            android:layout_alignParentBottom="true"
            android:id="@+id/connect_reader_button"
            android:visibility="gone"
            android:text="@string/connect_card_reader"
            android:textAllCaps="false"
            android:textColor="@color/sdk_white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:background="@drawable/pph_blue_btn_selector"
            android:onClick="onGoBack"
            android:layout_alignParentBottom="true"
            android:id="@+id/go_back"
            android:visibility="visible"
            android:text="@string/go_back"
            android:textAllCaps="false"
            android:textColor="@color/sdk_white"
            />

   </LinearLayout>

    <WebView

        android:id="@+id/id_webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="gone" />


</RelativeLayout>

